Layout and Alignment fixes

--- a/blocks/retain/retain.css
+++ b/blocks/retain/retain.css
@@ -59,12 +59,19 @@
   background: #d5d5d5;
 }
 
+.table-row:first-child .table-cell {
+  font-size: var(--body-font-size-s);
+  font-weight: bold;
+}
+
 .table-cell {
   border-bottom: 1px solid #d5d5d5;
   border-right: 1px solid #d5d5d5;
   display: table-cell;
   padding: 8px;
   width: 50%;
+  font-size: var(--body-font-size-s);
+  padding: 12px 16px;
 }
 
 .table-cell:last-child {
@@ -106,8 +113,10 @@
 
 .product__container-item .products p {
   padding: 8px;
-  margin: 0 8px;
+  margin: 0 0 0 8px;
   background: #f8f8f8;
+  font-size: var(--body-font-size-xs);
+  font-weight: bold;
 }
 
 .dashboard__section-one .product__container {
@@ -118,7 +127,7 @@
 .dashboard__section-one .product__container-item {
   flex-direction: column;
   align-items: center;
-  margin: 8px 14px;
+  margin: 7px 14px;
   justify-content: left;
   padding: 0;
 }
@@ -133,6 +142,12 @@
   margin: 0;
   background: transparent;
   color: #222222;
+  font-size: var(--body-font-size-m);
+  font-weight: bold;
+}
+
+.product__container-ai-product .product__container-item {
+  width: 100%;
 }
 /* End - Attrition Section */
 
